--- a/www/index.html
+++ b/www/index.html
@@ -21,9 +21,10 @@
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
+    <script src="js/config.js"></script>
   </head>
 
-  <body ng-app="starter">
+  <body ng-app="appistack">
     <ion-nav-view></ion-nav-view>
   </body>
 </html>
