--- a/www/index.html
+++ b/www/index.html
@@ -13,15 +13,20 @@
     -->
 
     <!-- ionic/angularjs js -->
+    <script src="lib/underscore/underscore.js"></script>
     <script src="lib/ionic/js/ionic.bundle.js"></script>
+    <script src="lib/angular-cookie/angular-cookie.js"></script>
+    <script src="lib/ng-token-auth/dist/ng-token-auth.js"></script>
+    <script src="lib/restangular/dist/restangular.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
-    <script src="js/controllers.js"></script>
     <script src="js/config.js"></script>
+    <script src="js/controllers.js"></script>
+    <script src="js/services.js"></script>
   </head>
 
   <body ng-app="appistack">
