--- a/www/index.html
+++ b/www/index.html
@@ -16,6 +16,7 @@
     <script src="lib/underscore/underscore.js"></script>
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="lib/angular-cookie/angular-cookie.js"></script>
+    <script src="lib/angular-messages/angular-messages.js"></script>
     <script src="lib/ng-token-auth/dist/ng-token-auth.js"></script>
     <script src="lib/restangular/dist/restangular.js"></script>
 
@@ -24,6 +25,7 @@
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
+    <script src="js/auth.js"></script>
     <script src="js/config.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
