--- a/www/index.html
+++ b/www/index.html
@@ -23,6 +23,7 @@
     <script src="js/auth.js"></script>
     <script src="js/config.js"></script>
     <script src="js/controllers.js"></script>
+    <script src="js/spectro.js"></script>
     <script src="js/services.js"></script>
   </head>
 
